crates/lang/tests/ui/trait_def/fail/message_payable_invalid_2.rs
use ink_lang as ink;

#[ink::trait_definition]
pub trait TraitDefinition {
    #[ink(message, payable = true)]
    fn message(&self);
}

fn main() {}
